--- a/note-tree.tex
+++ b/note-tree.tex
@@ -544,4 +544,14 @@ For any $\delta \leq 1/2$, we say that $S$ is a \emph{$\delta$-separator} if eac
   \end{align*}
 \end{proof}
 
+\section{March 23, 2021}
+
+\section{April 13, 2021}
+\subsection{A Reduction to the Metric Case}
+
+\section{April 20, 2021}
+\subsection{A Polynomial-Time Approximation Scheme for the MRCT Problem}
+A \emph{$k$-star} is a tree that has no more than $k$ internal nodes.
+It can be shown that a minimum routing cost $k$-star for a weighted graph $G = (V, E, w)$ can be determined in polynomial time.
+
 \end{document}
